components/scss/partials/_app.scss
/* .content-area {
	float: right;
	margin: 0 0 0 -25%;
	width: 100%;
}
.site-main {
	margin: 0 0 0 25%;
} */
.site-content .widget-area {
	float: left;
	overflow: hidden;
	width: 25%;
}
.site-footer {
	clear: both;
	width: 100%;
}
@media screen and (max-width: 768px) {
    .mobile-hidden {
        display: none;
    }
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

blockquote {
    border-top: 4px solid $teal-lt;
    border-left: none;
    border-bottom: 4px solid $teal-lt;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 80px;
    color: $teal;
    font-style: italic;
    margin: 30px 0;
    line-height: 1.4;
    position: relative;


    p {
        display: inline;
    }
    span {
        font-weight: bold;
        margin-left: 10px;
    }
}

blockquote::before{
  content: "\201C"; /*Unicode for Left Double Quote*/
  
  /*Font*/
  font-family: Georgia, serif;
  font-size: 80px;
  font-weight: bold;
  color: $teal-lt;
  
  /*Positioning*/
  position: absolute;
  left: 15px;
  top: 0;
}



.entry-header {
    border-bottom: 1px solid $teal;

    h1 {
        color: $teal;
    }
}

